java 11 support, dependencies updated, local env compatible